# TMTTools

./: README
R/: TMT.R  plotCalls.R  plotRatios.R
code/: CMakeLists.txt  IBSpectraExporter.cxx  PurityExporter.cxx  SpectraAnalyzer.cxx  TMTExporter.C  TMTExporter.cxx
toppas/: TMT_Quant_and_ID.toppas  iTRAQ4plex_Quant_and_ID.toppas  iTRAQ8plex_Quant_and_ID.toppas
